# flamapp-edge-viewer

./: .gitignore  README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/flamapp/edge/: Camera2Helper.kt  GLRenderer.kt  ImageUtil.kt  MainActivity.kt  NativeBridge.kt
web/: index.html  tsconfig.json
web/src/: main.ts
